--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,23 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
+      - name: Verify secrets are available
+        run: |
+          echo "Checking if secrets are set..."
+          if [ -z "${{ secrets.FIREBASE_API_KEY }}" ]; then echo "⚠️  FIREBASE_API_KEY is not set"; fi
+          if [ -z "${{ secrets.GHAI_TOKEN }}" ]; then echo "⚠️  GHAI_TOKEN is not set"; fi
+          if [ -z "${{ secrets.OPEN_WEATHER_API_KEY }}" ]; then echo "⚠️  OPEN_WEATHER_API_KEY is not set"; fi
+          if [ -z "${{ secrets.GEMINI_API_KEY }}" ]; then echo "⚠️  GEMINI_API_KEY is not set"; fi
+          echo "✅ Secret check complete"
+        
       - name: Inject secrets into environment file
         run: |
+          echo "Injecting secrets into environment.ts..."
           sed -i "s|\${{ secrets.FIREBASE_API_KEY }}|${{ secrets.FIREBASE_API_KEY }}|g" src/environments/environment.ts
           sed -i "s|\${{ secrets.GHAI_TOKEN }}|${{ secrets.GHAI_TOKEN }}|g" src/environments/environment.ts
           sed -i "s|\${{ secrets.OPEN_WEATHER_API_KEY }}|${{ secrets.OPEN_WEATHER_API_KEY }}|g" src/environments/environment.ts
           sed -i "s|\${{ secrets.GEMINI_API_KEY }}|${{ secrets.GEMINI_API_KEY }}|g" src/environments/environment.ts
+          echo "✅ Secrets injected successfully"
           
       - name: Build Angular app
         run: npm run build -- --configuration production --base-href /whoa-geier/
