Special characters in secret variables fixed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,10 +45,10 @@ jobs:
           GEMINI_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
           echo "Injecting secrets into environment.ts..."
-          sed -i "s/\${{ secrets.FIREBASE_API_KEY }}/$FIREBASE_KEY/g" src/environments/environment.ts
-          sed -i "s/\${{ secrets.GHAI_TOKEN }}/$GHAI/g" src/environments/environment.ts
-          sed -i "s/\${{ secrets.OPEN_WEATHER_API_KEY }}/$WEATHER_KEY/g" src/environments/environment.ts
-          sed -i "s/\${{ secrets.GEMINI_API_KEY }}/$GEMINI_KEY/g" src/environments/environment.ts
+          sed -i "s/FIREBASE_API_KEY/$FIREBASE_KEY/g" src/environments/environment.ts
+          sed -i "s/GHAI_TOKEN/$GHAI/g" src/environments/environment.ts
+          sed -i "s/OPEN_WEATHER_API_KEY/$WEATHER_KEY/g" src/environments/environment.ts
+          sed -i "s/GEMINI_API_KEY/$GEMINI_KEY/g" src/environments/environment.ts
           echo "✅ Secrets injected successfully"
           
       - name: Build Angular app
