--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
+# Environment files with secrets
+/src/environments/environment.local.ts
+
 # Miscellaneous
 /.angular/cache
 .sass-cache/
@@ -43,3 +46,6 @@ Thumbs.db
 
 # Local environment files with real API keys
 src/environments/environment.local.ts
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
