--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -21,13 +21,16 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
       
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+      
       - name: Deploy to Firebase Functions  
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
           GITHUB_TOKEN_SECRET: ${{ secrets.GHAI_TOKEN }}
         run: |
           cd functions
           npm ci
           cd ..
-          # Deploy with the secret value
-          firebase deploy --only functions --token "$FIREBASE_TOKEN" --project whoa-geier --non-interactive --force
+          firebase deploy --only functions --project whoa-geier --non-interactive --force
