--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -27,10 +27,10 @@ jobs:
           credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
       
       - name: Deploy to Firebase Functions  
+        env:
+          GITHUB_TOKEN: ${{ secrets.GHAI_TOKEN }}
         run: |
           cd functions
           npm ci
           cd ..
-          # Set environment variable during deploy
-          firebase functions:config:set github.token="${{ secrets.GHAI_TOKEN }}" --project whoa-geier --non-interactive || true
           firebase deploy --only functions --project whoa-geier --non-interactive --force
