Set GITHUB_TOKEN env var in .env.local during deployment

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -33,4 +33,6 @@ jobs:
           cd functions
           npm ci
           cd ..
+          # Provide the environment variable value for deployment
+          echo "GITHUB_TOKEN=$GITHUB_TOKEN" > .env.local
           firebase deploy --only functions --project whoa-geier --non-interactive --force
